Showing the card successfully

--- a/src/templete.html
+++ b/src/templete.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team Profile Generator</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <h1> My Team </h1>
+      <h1>My Team</h1>
     </nav>
     <main id="team">
-
-
+      <div class="member">
+        <div class="title">
+          <h1>Name</h1>
+          <h2>Title</h2>
+        </div>
+        <div class="information">
+          <p>ID: </p>
+          <p>Email: </p>
+          <p>Office Number: </p>
+        </div>
+      </div>
     </main>
-</body>
+  </body>
 </html>
